istio-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  gateways:
    - simple
  hosts:
    - simple.kacker.io
  http:
    - match:
        - uri:
            exact: "/simple/hello"
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: simple.simple.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/nginx"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx.simple.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: simple
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - simple.kacker.io
      port:
        name: http-simple
        number: 80
        protocol: HTTP
